# rscheme

./: .gitignore  CHARACTER_SUPPORT.md  CMakeLists.txt  README.md  compiled_output_latest.txt  interpreted_output_latest.txt  r5rs_compliance_test.c  r5rs_compliance_test.scm  test_missing.c  test_missing.scm  test_quote.c  test_quote.scm  test_set.c  test_set.scm
examples/: 01_hello_world.scm  02_basic_arithmetic.scm  03_variables.scm  04_conditionals.scm  05_functions.scm  06_lists.scm  07_recursion.scm  08_higher_order.scm  09_let_and_scope.scm  10_mutation.scm  11_quoting.scm  12_predicates.scm  13_closures.scm  14_tail_recursion.scm  15_advanced_patterns.scm  16_list_algorithms.scm  17_tree_structures.scm  18_data_structures.scm  19_string_processing.scm  20_math_functions.scm  README.md
include/: builtins.h  compiler.h  environment.h  interpreter.h  lexer.h  parser.h  rscheme.h  runtime.h  scheme_objects.h
src/: builtins.c  compiler.c  environment.c  interpreter.c  lexer.c  main.c  parser.c  runtime.c  scheme_objects.c
